--- a/css/styles.css
+++ b/css/styles.css
@@ -18,6 +18,7 @@ body {
 }
 h1,h2,h3 {
     font-weight: 900;
+    line-height: 1.2rem;
     margin: 1rem 0 4rem 0;
 }
 
@@ -64,7 +65,7 @@ img {
 .text-center {
     text-align: center;
 }
-.mt5 {
+.mt-5 {
     margin-top: 5rem;
 }
 
@@ -190,10 +191,36 @@ img {
     margin: 0;
     line-height: 1;
 }
+
  /** Sobre Nosotros **/
 
- 
+.nosotros {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    background-image: url(../08-arquitectura/img/nosotros.jpg);
+    background-repeat: no-repeat;
+    background-position: bottom center;
+ }
+ @media (min-width: 768px ){ 
+    .nosotros {
+        grid-template-columns: repeat(3, 1fr);
+    }
+}
 
+ .contenido-nosotros {
+    background-color: var(--blanco);
+    padding: 5rem;
+ }
+@media (min-width: 768px ){ 
+    .contenido-nosotros {
+        grid-column: 2 / 4;
+    }
+}
+
+.contenido-nosotros h2,
+.contenido-nosotros p {
+    margin-bottom: 1rem;
+}
 
 
 
