--- a/css/styles.css
+++ b/css/styles.css
@@ -79,7 +79,6 @@ img {
     background-position: center;
     padding: 5rem 0;
 }
-
 .contenido-header {
     display: flex;
     flex-direction: column;
@@ -331,4 +330,32 @@ img {
         grid-column: 3 / 4;
         grid-row: 1 / 3;
     }
+}
+
+/** footer **/
+
+.footer {
+    height: 50rem;
+    background-image: url(../08-arquitectura/img/footer_bg.jpg);
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    color: var(--blanco);
+}
+
+.footer a {
+    color: var(--blanco);
+    font-size: 2rem;
+}
+
+.copyrigth {
+    border-color: var(--negro);
+    text-align: center;
+    margin: 5rem 0 0 0;
+    font-size: 2rem;
+    padding: 1rem;
 }
